[package]
name = "acteon-mcp-server"
description = "Model Context Protocol (MCP) server for Acteon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
acteon-ops = { workspace = true }
acteon-core = { workspace = true }

chrono = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

[lints]
workspace = true
