[package]
name = "acteon-provider"
description = "Provider traits, registry, and webhook provider for Acteon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
trace-context = ["reqwest"]
webhook = ["reqwest"]

[dependencies]
acteon-core = { workspace = true }
async-trait = { workspace = true }
opentelemetry = { workspace = true }
reqwest = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
