[package]
name = "acteon-server"
description = "Standalone HTTP server for the Acteon action gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "acteon_server"
path = "src/lib.rs"

[[bin]]
name = "acteon-server"
path = "src/main.rs"

[features]
default = ["redis"]
redis = ["dep:acteon-state-redis"]
postgres = ["dep:acteon-state-postgres", "dep:acteon-audit-postgres"]
clickhouse = ["dep:acteon-state-clickhouse", "dep:acteon-audit-clickhouse"]
dynamodb = ["dep:acteon-state-dynamodb", "dep:acteon-audit-dynamodb"]
elasticsearch = ["dep:acteon-audit-elasticsearch"]
all-backends = ["redis", "postgres", "clickhouse", "dynamodb", "elasticsearch"]
# AWS provider features — only compile the SDKs you need
aws-sns = ["acteon-aws/sns"]
aws-lambda = ["acteon-aws/lambda"]
aws-eventbridge = ["acteon-aws/eventbridge"]
aws-sqs = ["acteon-aws/sqs"]
aws-ses = ["acteon-aws/ses"]
aws-s3 = ["acteon-aws/s3"]
aws-ec2 = ["acteon-aws/ec2"]
aws-autoscaling = ["acteon-aws/autoscaling"]
aws-all = ["aws-sns", "aws-lambda", "aws-eventbridge", "aws-sqs", "aws-ses", "aws-s3", "aws-ec2", "aws-autoscaling"]
# Azure provider features — only compile the SDKs you need
azure-blob = ["acteon-azure/blob"]
azure-eventhubs = ["acteon-azure/eventhubs"]
azure-all = ["azure-blob", "azure-eventhubs"]
# GCP provider features — only compile the SDKs you need
gcp-pubsub = ["acteon-gcp/pubsub"]
gcp-storage = ["acteon-gcp/storage"]
gcp-all = ["gcp-pubsub", "gcp-storage"]

[dependencies]
acteon-audit = { workspace = true, features = ["openapi"] }
acteon-audit-memory = { workspace = true }
acteon-audit-postgres = { workspace = true, optional = true }
acteon-audit-clickhouse = { workspace = true, optional = true }
acteon-audit-dynamodb = { workspace = true, optional = true }
acteon-audit-elasticsearch = { workspace = true, optional = true }
acteon-core = { workspace = true, features = ["openapi"] }
acteon-state = { workspace = true }
acteon-state-memory = { workspace = true }
acteon-state-redis = { workspace = true, optional = true }
acteon-state-postgres = { workspace = true, optional = true }
acteon-state-dynamodb = { workspace = true, optional = true }
acteon-state-clickhouse = { workspace = true, optional = true }
acteon-rules = { workspace = true }
acteon-rules-yaml = { workspace = true }
acteon-provider = { workspace = true, features = ["webhook"] }
acteon-email = { workspace = true, features = ["ses"] }
acteon-aws = { workspace = true }
acteon-azure = { workspace = true }
acteon-gcp = { workspace = true }
acteon-twilio = { workspace = true }
acteon-teams = { workspace = true }
acteon-discord = { workspace = true }
acteon-executor = { workspace = true }
acteon-gateway = { workspace = true }
acteon-llm = { workspace = true }
acteon-embedding = { workspace = true }
acteon-crypto = { workspace = true, features = ["tls"] }
acteon-wasm-runtime = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
clap = { workspace = true }
croner = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-axum = { workspace = true }
minijinja = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
acteon-audit = { workspace = true }
acteon-audit-memory = { workspace = true }
axum-test = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
