[package]
name = "acteon-simulation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Simulation and testing framework for Acteon"

[dependencies]
acteon-core.workspace = true
acteon-crypto = { workspace = true, features = ["tls"] }
acteon-gateway.workspace = true
acteon-state.workspace = true
acteon-state-memory.workspace = true
acteon-state-redis = { workspace = true, optional = true }
acteon-state-dynamodb = { workspace = true, optional = true }
acteon-state-postgres = { workspace = true, optional = true }
acteon-state-clickhouse = { workspace = true, optional = true }
acteon-audit.workspace = true
acteon-audit-memory.workspace = true
acteon-audit-postgres = { workspace = true, optional = true }
acteon-audit-clickhouse = { workspace = true, optional = true }
acteon-provider.workspace = true
acteon-executor.workspace = true
acteon-rules.workspace = true
acteon-rules-yaml.workspace = true
acteon-wasm-runtime.workspace = true
acteon-llm.workspace = true
acteon-client.workspace = true
acteon-server.workspace = true

tokio.workspace = true
axum.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
reqwest.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true

parking_lot = "0.12"
rand = "0.8"

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rcgen = "0.13"

[features]
default = []
redis = ["dep:acteon-state-redis"]
dynamodb = ["dep:acteon-state-dynamodb"]
postgres = ["dep:acteon-state-postgres", "dep:acteon-audit-postgres"]
clickhouse = ["dep:acteon-state-clickhouse", "dep:acteon-audit-clickhouse"]

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false

[[example]]
name = "redis_simulation"
required-features = ["redis"]

[[example]]
name = "dynamodb_simulation"
required-features = ["dynamodb"]

[[example]]
name = "postgres_simulation"
required-features = ["postgres"]

[[example]]
name = "postgres_chain_simulation"
required-features = ["postgres"]

[[example]]
name = "clickhouse_simulation"
required-features = ["clickhouse"]

[[example]]
name = "mixed_backends_simulation"
# No required-features - uses conditional compilation

[[example]]
name = "polyglot_client_simulation"
# No required-features - runs external language runtimes

[[example]]
name = "otel_tracing_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "branch_chain_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "scheduled_actions_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "subscription_chain_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "subscription_branching_chain_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "subscription_group_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "subscription_approval_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "subscription_multi_client_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "subscription_state_machine_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "quota_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "recurring_actions_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "payload_encryption_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "retention_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "circuit_breaker_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "provider_health_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "monitoring_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "wasm_plugin_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "compliance_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "ec2_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "template_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "mtls_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "analytics_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "azure_simulation"
# No required-features - uses in-memory backends

[[example]]
name = "gcp_simulation"
# No required-features - uses in-memory backends

[lints]
workspace = true
